[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-debug-env"
version = "1.0.0"
description = "OpenEnv environment: LLM agent fixes broken SQL queries (easy to hard)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RupalSharma"}
]
keywords = ["openenv", "rl", "sql", "debugging", "agent", "environment"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.1",
    "openai>=1.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/RupalSharma/sql-debug-env"
Repository = "https://github.com/1981Rupal/sql-debug-env"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
